--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -65,3 +65,12 @@ box-shadow: 0px 3px 3px 0px rgba(255,255,255,1);
     }
   }
   
+  /* Navbar.css */
+.transition-transform {
+  transition: transform 0.5s ease-in-out, opacity 0.5s ease-in-out;
+}
+
+/* If you want a smooth transition for opacity as well */
+.opacity-0 {
+  opacity: 0;
+}
