--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -64,6 +64,8 @@ box-shadow: 0px 3px 3px 0px rgba(255,255,255,1);
       transform: translateX(-100%) translateY(-100%);
     }
   }
+
+  
   
   /* Navbar.css */
 .transition-transform {
@@ -74,3 +76,26 @@ box-shadow: 0px 3px 3px 0px rgba(255,255,255,1);
 .opacity-0 {
   opacity: 0;
 }
+
+.nav-link {
+  display: inline-block;
+  text-decoration: none;
+  position: relative;
+}
+
+.nav-link::after {
+  content: '';
+  display: block;
+  width: 100%; /* Set the full width */
+  height: 2.3px;
+  background: white; /* Or any other color */
+  transition: transform 0.3s ease;
+  margin-top: 0.6rem;
+  transform: scaleX(0); /* Initially collapsed */
+  transform-origin: center; /* Start from the center */
+}
+
+.nav-link:hover::after {
+  transform: scaleX(1); /* Expand to full width */
+}
+
