--- a/src/components/Registrations/Signup.css
+++ b/src/components/Registrations/Signup.css
@@ -1,34 +1,61 @@
-/* .signup-container {
-    max-width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-  }
+.signup-container {
+  margin-top: 44px;
+  width: 90%;
+  max-width: 600px; 
+  margin: 0 auto;
+}
+
+.form-content {
+  width: 100%;
+}
+
+.form-step {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #f5f5f5; 
+  padding: 20px;
+  border-radius: 10px;
+}
+
+.input-group {
+  display: flex;
+  flex-direction: column;
+}
+
+.input-group input {
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.checkbox-group {
+  display: flex;
+  align-items: baseline;
+  margin-top: 15px;
   
-  .form-group {
-    margin-bottom: 20px;
+}
+
+.navigation-buttons {
+  display: flex;
+  justify-content: space-between;
+  padding-inline: 5px;
+  margin-top: 20px;
+}
+
+@media (max-width: 768px) {
+  .signup-container {
+    width: 95%;
+    padding: 10px;
   }
-  
-  .form-group label {
-    display: block;
-    font-size: 16px;
-    margin-bottom: 5px;
+
+  .form-step {
+    padding: 15px;
   }
-  
-  .form-group input {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+
+
+  .navigation-buttons button {
+    padding: 10px;
+    font-size: 14px; /* Ensure buttons are still readable */
   }
-  
-  .step-navigation {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-  }
-  
-  .step-navigation button {
-    width: 100px;
-  }
-   */
+}
+ 
