--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,10 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    /* overflow-x: hidden; */
+    font-family: "Lora", system-ui;
+  font-optical-sizing: auto;
+  font-style: normal;
+      
 }
 
 html{
