--- a/src/Util.css
+++ b/src/Util.css
@@ -1,116 +1,78 @@
-.shadow-rays{
-    box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+.shadow-rays {
+  box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
 }
 
-/* Custom white shadow class */
 .shadow-white-custom {
-    box-shadow: 
-      0px 1px 0px 0px rgba(255, 255, 255, 0.22),
-      1px 0px 0px 0px rgba(255, 255, 255, 0.22),
-      1px 2px 0px 0px rgba(255, 255, 255, 0.22),
-      2px 1px 0px 0px rgba(255, 255, 255, 0.22),
-      2px 3px 0px 0px rgba(255, 255, 255, 0.22),
-      3px 2px 0px 0px rgba(255, 255, 255, 0.22),
-      3px 4px 0px 0px rgba(255, 255, 255, 0.22),
-      4px 3px 0px 0px rgba(255, 255, 255, 0.22),
-      4px 5px 0px 0px rgba(255, 255, 255, 0.22),
-      5px 4px 0px 0px rgba(255, 255, 255, 0.22),
-      5px 6px 0px 0px rgba(255, 255, 255, 0.22),
-      6px 5px 0px 0px rgba(255, 255, 255, 0.22),
-      6px 7px 0px 0px rgba(255, 255, 255, 0.22),
-      7px 6px 0px 0px rgba(255, 255, 255, 0.22),
-      7px 8px 0px 0px rgba(255, 255, 255, 0.22),
-      8px 7px 0px 0px rgba(255, 255, 255, 0.22);
-  }
-*
-  .shadow-2{
-    box-shadow: -2px 2px 0px 0px rgba(255, 255, 255, 1);
-  }
-  
-  .shadow-3{
-    box-shadow: 2px 2px 0px 0px rgba(255, 255, 255, 1);
-  }
-  
+  box-shadow:
+    0px 1px 0px 0px rgba(255, 255, 255, 0.22),
+    1px 0px 0px 0px rgba(255, 255, 255, 0.22),
+    1px 2px 0px 0px rgba(255, 255, 255, 0.22),
+    2px 1px 0px 0px rgba(255, 255, 255, 0.22),
+    2px 3px 0px 0px rgba(255, 255, 255, 0.22),
+    3px 2px 0px 0px rgba(255, 255, 255, 0.22),
+    3px 4px 0px 0px rgba(255, 255, 255, 0.22),
+    4px 3px 0px 0px rgba(255, 255, 255, 0.22),
+    4px 5px 0px 0px rgba(255, 255, 255, 0.22),
+    5px 4px 0px 0px rgba(255, 255, 255, 0.22),
+    5px 6px 0px 0px rgba(255, 255, 255, 0.22),
+    6px 5px 0px 0px rgba(255, 255, 255, 0.22),
+    6px 7px 0px 0px rgba(255, 255, 255, 0.22),
+    7px 6px 0px 0px rgba(255, 255, 255, 0.22),
+    7px 8px 0px 0px rgba(255, 255, 255, 0.22),
+    8px 7px 0px 0px rgba(255, 255, 255, 0.22);
+}
 
-  /* Container for the hover effect */
-/* Container for the hover effect */
+.shadow-2 {
+  box-shadow: -2px 2px 0px 0px rgba(255, 255, 255, 1);
+}
+
+.shadow-3 {
+  box-shadow: 2px 2px 0px 0px rgba(255, 255, 255, 1);
+}
+
 .card-container {
-    position: relative;
-    overflow: hidden;
-  }
-  
-  /* White overlay effect */
-  .card-overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: white;
-    transform: translateY(-100%);
-    transition: transform 0.5s ease-in-out;
-    z-index: 1;
-  }
-  
-  /* Show the overlay on hover */
-  .card-container:hover .card-overlay {
-    transform: translateY(0);
-  }
-  
-  /* Jersey number visibility and style */
-  .jersey-number {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%) translateY(100%);
-    font-size: 3rem; /* Adjust font size as needed */
-    font-weight: bold;
-    color: black;
-    background-color: rgba(255, 255, 255, 0.8); /* Slightly transparent background */
-    text-align: center;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: transform 0.5s ease-in-out;
-    z-index: 2;
-  }
-  
-  /* Show the jersey number on hover */
-  .card-container:hover .jersey-number {
-    transform: translate(-50%, -50%) translateY(0);
-  }
-  
+  position: relative;
+  overflow: hidden;
+}
 
-  .btn-pink {
-    width: fit-content;
-    color: white;
-    padding: 0.8rem 2.3rem;
-    box-shadow: 5px 5px 7px 0px #0000003f;
-    font-size: 18px;
-    cursor: pointer;
-    transition: all 0.5s;
-    font-weight: 500;
-    position: relative;
-    z-index: 1;
-  }
-  .btn-pink::before {
-    content: "";
-    position: absolute;
-    background-color: #1f1f1f;
-    top: 0;
-    left : 0;
-    right: 0;
-    bottom: 0;
-    z-index: -1;
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: all 0.8s;
-  }
-  .btn-pink:hover::before {
-    transform: scaleX(1);
-  }
-  .btn-pink:hover {
-    color: #fff;
-  }
+
+.card-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  transform: translateY(-100%);
+  transition: transform 0.5s ease-in-out;
+  z-index: 1;
+}
+
+
+.card-container:hover .card-overlay {
+  transform: translateY(0);
+}
+
+
+.jersey-number {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) translateY(100%);
+  font-size: 3rem;
+  font-weight: bold;
+  color: black;
+  background-color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: transform 0.5s ease-in-out;
+  z-index: 2;
+}
+
+.card-container:hover .jersey-number {
+  transform: translate(-50%, -50%) translateY(0);
+}
