--- a/src/components/Registrations/Signup.css
+++ b/src/components/Registrations/Signup.css
@@ -1,7 +1,7 @@
 .signup-container {
   margin-top: 44px;
   width: 90%;
-  max-width: 600px; 
+  max-width: 600px;
   margin: 0 auto;
 }
 
@@ -13,7 +13,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  background-color: #f5f5f5; 
+  background-color: #f5f5f5;
   padding: 20px;
   border-radius: 10px;
 }
@@ -32,7 +32,7 @@
   display: flex;
   align-items: baseline;
   margin-top: 15px;
-  
+
 }
 
 .navigation-buttons {
@@ -55,7 +55,6 @@
 
   .navigation-buttons button {
     padding: 10px;
-    font-size: 14px; /* Ensure buttons are still readable */
+    font-size: 14px;
   }
 }
- 
