--- a/src/components/TeamsPageComponents/Cards.css
+++ b/src/components/TeamsPageComponents/Cards.css
@@ -1,4 +1,3 @@
-/* Cards.css */
 .cards-container {
     padding: 20px;
 }
@@ -54,7 +53,7 @@
 }
 
 .team-card:hover {
-    background-color: rgba(0, 0, 255, 0.6); /* Blue-black shade */
+    background-color: rgba(0, 0, 255, 0.6);
 }
 
 .player-image {
@@ -72,6 +71,3 @@
     margin: 0;
     font-size: 16px;
 }
-
-
-
